--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,24 +1,19 @@
 project:
   type: website
-
 website:
   page-navigation: true
   title: "DATS 1001--Fall Schedule"
   description: "Homepage for DATS 1001 - Data Science for All, George Washington University."
   site-url: "https://ds4all.rocks"
-
   repo-url: "https://github.com/dats1001-fall-2024"
   repo-actions: [edit, issue]
-
   open-graph: true
   favicon: "images/cpe_logo.png"
   twitter-card: true
-
   page-footer:
     right: "This page is built with [Quarto](https://quarto.org/). 👷🛠️"
     left: "&copy; Copyright 2024, [Emmanuel Teitelbaum](https://emmanuel.teitelbaum.com)"
     background: "#1F3867"
-
   sidebar:
     background: "#1F3867"
     logo: "images/ds4all-logo.png"
@@ -34,7 +29,6 @@ website:
       - icon: r-circle
         href: https://posit.cloud
         text: "Access R and RStudio"
-
     style: "docked"
     search: true
     collapse-level: 1
@@ -55,6 +49,18 @@ website:
             text: Useful links
           - href: faq.qmd
             text: FAQ
+      - section: "Coding Asignments"
+        contents:
+          - href: assignments/coding-assignment-1.qmd
+            text: "Assignment 1"
+          - href: assignments/coding-assignment-2.qmd
+            text: "Assignment 2"
+          # - href: assignments/coding-assignment-3.qmd
+          #   text: "Assignment 3"
+          # - href: assignments/coding-assignment-4.qmd
+          #   text: "Assignment 4"
+          # - href: assignments/coding-assignment-5.qmd
+          #   text: "Assignment 5"
       - section: "Project"
         contents:
            #- href: project-description.qmd
@@ -67,38 +73,6 @@ website:
             text: "Assignment 3"
           - href: project/project-datasets.qmd
             text: Datasets
-      # - section: "Weekly materials"
-      #   contents:
-      #     - href: weeks/week-1.qmd
-      #       text: "Week 1"
-      #     - href: weeks/week-2.qmd
-      #       text: "Week 2"
-      #     - href: weeks/week-3.qmd
-      #       text: "Week 3"
-      #     - href: weeks/week-4.qmd
-      #       text: "Week 4"
-      #     - href: weeks/week-5.qmd
-      #       text: "Week 5"
-      #     - href: weeks/week-6.qmd
-      #       text: "Week 6"
-      #     - href: weeks/week-7.qmd
-      #       text: "Week 7"
-      #     - href: weeks/week-8.qmd
-      #       text: "Week 8"
-      #     - href: weeks/week-9.qmd
-      #       text: "Week 9"
-      #     - href: weeks/week-10.qmd
-      #       text: "Week 10"
-      #     - href: weeks/week-11.qmd
-      #       text: "Week 11"
-      #     - href: weeks/week-12.qmd
-      #       text: "Week 12"
-      #     - href: weeks/week-13.qmd
-      #       text: "Week 13"
-      #     - href: weeks/week-14.qmd
-      #       text: "Week 14"
-      #     - href: weeks/week-15.qmd
-      #       text: "Week 15"
 format:
   html:
     theme:
@@ -108,7 +82,5 @@ format:
     code-copy: true
     code-overflow: wrap
     toc: true
-
 freeze: auto
-
 editor: source
