--- a/_quarto.yml
+++ b/_quarto.yml
@@ -75,6 +75,10 @@ website:
         contents:
           - href: weeks/week-1.qmd
             text: "Week 1"
+          - href: weeks/week-2.qmd
+            text: "Week 2"
+          - href: weeks/week-3.qmd
+            text: "Week 3"
 format:
   html:
     theme:
