--- a/_quarto.yml
+++ b/_quarto.yml
@@ -79,6 +79,8 @@ website:
             text: "Week 2"
           - href: weeks/week-3.qmd
             text: "Week 3"
+          - href: weeks/week-3.qmd
+            text: "Week 4"
 format:
   html:
     theme:
